--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -306,6 +306,27 @@ rounded-pill робить заокруглення країв компонент
                 </div>
     </div>
 
+    {{!-- УРОК ІКОНКИ --}}
+    <h2 class="mt-5">ICONS
+      <i class="bi bi-chat-square-text"></i>
+    </h2>
+    <div>
 
 
+      <button class="btn btn-danger">
+        <i class="bi bi-balloon-heart"></i>
+
+      </button>
+    </div>
+    {{!-- Font Awesome - це технології, яка надає бібліотеку іконок
+    різного типу, формату, з анімацією та стилізацією --}}
+
+    <div>
+      <i class="fa-solid fa-plane" style="color: #ab6edd;"></i>
+      <i class="fa-solid fa-plane fa-fade" style="color: #ab6edd;"></i>
+    </div>
+
+    <div>
+      <img src="/svg/tiktok.svg">
+    </div>
 </main>
