--- a/src/component/title.hbs
+++ b/src/component/title.hbs
@@ -5,3 +5,13 @@
 <h3 class="mb-3">{{data}}</h3>
 
 {{/if}}
+
+<style>
+    h2 {
+        color: green;
+    }
+
+    h3 {
+        color: green;
+    }
+</style>
