--- a/src/layout/bootstrap.hbs
+++ b/src/layout/bootstrap.hbs
@@ -10,6 +10,9 @@
 		{{page.title}}
 	</title>
 	<meta charset='utf-8' />
+
+	<link href='css/normalize.css' rel='stylesheet' />
+
 	<link href='css/index.css' rel='stylesheet' />
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,9 +21,19 @@
 	{{!-- icons --}}
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
+
+
+	<style>
+		h1 {
+			color: pink;
+		}
+	</style>
+
+	<link href='css/style.css' rel='stylesheet' />
+
 </head>
 
-<body>
+<body class="p-5">
 
 	{{{body}}}
 	{{!-- bootstrap --}}
@@ -28,6 +41,12 @@
 
 	{{!-- Font awesome --}}
 	<script src="https://kit.fontawesome.com/34fbe5ffb4.js" crossorigin="anonymous"></script>
+
+	<style>
+		h1 {
+			color: pink;
+		}
+	</style>
 </body>
 
 </html>
